--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,7 +2,13 @@ doctype html
 html
   head
     title= title
+    meta(name="viewport" content="width=device-width, initial-scale=1.0")
+    link(href="https://fonts.googleapis.com/css?family=Caveat|Oswald&display=swap" rel="stylesheet")
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
+    nav
+      #logo
+        | Comic
+        span City
     block content
     script(src='/javascripts/script.js', type='text/javascript')
