--- a/views/index.jade
+++ b/views/index.jade
@@ -4,6 +4,10 @@ block content
   head
     title= title
   body(onload='init(#{id}, #{latestId})')
+    nav
+      #logo
+        | Comic
+        span City
     h1= title
 
     // Wrapper
