change site name

--- a/views/index.jade
+++ b/views/index.jade
@@ -6,8 +6,8 @@ block content
   body(onload='init(#{id}, #{latestId})')
     nav
       #logo
-        | Comic
-        span City
+        | Cyber City
+        span Comics
     h1= title
 
     // Wrapper
