--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -54,8 +54,8 @@ input {
   border: none;
   color: var(--color-bg);
   background-color: var(--color-blue);
-  margin: 3% 2%;
-  font-size: 20px;
+  margin: 2% 1%;
+  font-size: 16;
   padding: 3px 12px;
   border: 1px solid var(--color-select);
   transition: background-color 0.5s ease;
@@ -88,5 +88,10 @@ input:hover {
 
   #transcript p {
     width: 90%;
+  }
+
+  input {
+    margin: 3% 2%;
+    font-size: 20px;
   }
 }
