--- a/views/layout.jade
+++ b/views/layout.jade
@@ -5,6 +5,15 @@ html
     meta(name="viewport" content="width=device-width, initial-scale=1.0")
     link(href="https://fonts.googleapis.com/css?family=Caveat|Oswald&display=swap" rel="stylesheet")
     link(rel='stylesheet', href='/stylesheets/style.css')
+    script(async src="https://www.googletagmanager.com/gtag/js?id=UA-153068245-1")
+    script.
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-153068245-1');
+
+
   body
     block content
     script(src='/javascripts/script.js', type='text/javascript')
