Test view count display on homepage

--- a/views/index.jade
+++ b/views/index.jade
@@ -27,4 +27,4 @@ block content
     //Footer
     footer
       &copy; Copyright 2019 Cyber City Comics
-      #sfc639ykhz8ee3hyjjgg7kjehsx4b2qkbtk
+      #viewCount View Count: #{viewCount}
