Switch to async sql query

--- a/views/index.jade
+++ b/views/index.jade
@@ -26,5 +26,5 @@ block content
     
     //Footer
     footer
-      &copy; Copyright 2019 Cyber City Comics
+      | &copy; Copyright 2019 Cyber City Comics
       #viewCount View Count: #{viewCount}
