Fix company name on comic title

--- a/views/index.jade
+++ b/views/index.jade
@@ -10,7 +10,7 @@ block content
       #logo
         | Cyber City
         span Comics
-    h1= title
+    h1 xkcd ##{id}
 
     // Wrapper
     #wrapper
