--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,4 +1,4 @@
-/* Color definitions. Taken from boostrap color palette:  
+/* Color definitions. Taken from bootstrap color palette:  
 * https://github.com/twbs/bootstrap/blob/v4-dev/scss/_variables.scss
 */
 :root { 
